Added trading on Binance

--- a/resources/lang/uk.json
+++ b/resources/lang/uk.json
@@ -2,5 +2,6 @@
     "Login": "Вхід",
     "Register": "Реєстрація",
     "Settings": "Налаштування",
-    "Logout": "Вихід"
+    "Logout": "Вихід",
+    "Trade": "Торгівля"
 }
