Added BinanceSDK and fixed profit indicator

--- a/resources/lang/uk.json
+++ b/resources/lang/uk.json
@@ -3,5 +3,6 @@
     "Register": "Реєстрація",
     "Settings": "Налаштування",
     "Logout": "Вихід",
-    "Trade": "Торгівля"
+    "Trade": "Торгівля",
+    "Futures": "Ф'ючерси"
 }
